--- a/registration2/.project
+++ b/registration2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>registration2</name>
+	<name>registration-details</name>
 	<comment></comment>
 	<projects>
 	</projects>
